# Gaiia

./: .gitignore  justfile  package.json  pnpm-lock.yaml  pyproject.toml
api/: main.py  settings.py
api/common/: utils.py
api/features/: __init__.py
api/features/verifai/: __init__.py  config.py  graph.py  models.py  router.py
api/features/verifai/agents/: __init__.py  extract_claims.py  generate_report.py  research_evidence.py  verify_evidence.py
api/middlewares/: __init__.py  cors.py
apps/api/: main.py  pyproject.toml
apps/web/src/components/app-sidebar/: nav-main.tsx
apps/web/src/lib/: app-features.ts
src/app/: layout.tsx
src/app/(features)/verifai/: page.tsx
src/components/app-header/: app-header.tsx
src/components/app-sidebar/: feature-switcher.tsx
src/hooks/: use-app-features.ts
src/providers/: app-features-provider.tsx
